--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -3,6 +3,10 @@
     font-size: 22px;
   }
 
+  a {
+    font-size: 22px;
+  }
+
   .wrapper {
     width: 100%;
   }
@@ -17,9 +21,12 @@
       margin: 0px;
       width: 100%;
 
-      .last-name {
-        font-size: 50px;
+      .blurb-line {
+        .text {
+          max-width: 85%;
+        }
       }
+
     }
 
     .right-column {
